--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/banner.css">
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/news.css">
     <link rel="stylesheet" href="./css/footer.css">
     <!------------------------------------------------------------>
     
@@ -28,14 +29,14 @@
             </picture>
             <ul class="header__menu flex-container justify-space-between">
                 <li class="header__menu-item">
-                    <a class="header__menu-link nav-text-style" href="./pages/shop.html">SHOP</a>
+                    <a class="header__menu-link nav-text-styles" href="./pages/shop.html">SHOP</a>
                     <i class="fa-solid fa-chevron-down header__menu-chevron"></i>
                 </li>
                 <li class="header__menu-item">
-                    <a class="header__menu-link nav-text-style" href="./pages/contact.html">CONTACTO</a>
+                    <a class="header__menu-link nav-text-styles" href="./pages/contact.html">CONTACTO</a>
                 </li>
                 <li class="header__menu-item">
-                    <a class="header__menu-link nav-text-style" href="./pages/login.html">LOGIN</a>
+                    <a class="header__menu-link nav-text-styles" href="./pages/login.html">LOGIN</a>
                 </li>
                 <li class="header__menu-icon">
                     <a class="header__menu-link" href="./pages/cart.html">
@@ -55,7 +56,7 @@
     <main class="products flex-container flex-direction-column">
         <section class="product">
             <article class="product__info">
-                <h3 class="product__title">Star Wars & <br>The Mandalorian</h3>
+                <h3 class="product__title h2-title">Star Wars & <br>The Mandalorian</h3>
                 <p class="product__description">Disfruta de una saga que sigue <br>agregando personajes a su colección.</p>
                 <div class="product__line">
                     <a class="product__link" href="./pages/shop.html">VER COLECCIÓN</a>
@@ -67,7 +68,7 @@
         </section>
         <section class="product">
             <article class="product__info">
-                <h3 class="product__title">POKEMON INDIGO</h3>
+                <h3 class="product__title h2-title">POKEMON INDIGO</h3>
                 <p class="product__description">Atrapa todos los que puedas y disfruta <br>de una colección llena de amigos.</p>
                 <div class="product__line">
                     <a href="./pages/shop.html" class="product__link">VER COLECCIÓN</a>
@@ -79,7 +80,7 @@
         </section>
         <section class="product">
             <article class="product__info">
-                <h3 class="product__title">HARRY POTTER</h3>
+                <h3 class="product__title h2-title">HARRY POTTER</h3>
                 <p class="product__description">Revive los recuerdos de una saga llena <br>de magia y encanto.</p>
                 <div class="product__line">
                     <a href="./pages/shop.html" class="product__link">VER COLECCIÓN</a>
@@ -91,61 +92,72 @@
         </section>
     </main>
     <section class="news">
-        <h2>Últimos lanzamientos</h2>
-        <ul>
-            <li>
-                <article>
-                    <picture>
-                        <img src="./img/star-wars/trooper-1.webp" alt="Figura coleccionable Funko de un Stormtrooper de la película 'Star Wars'">
-                    </picture>
-                    <div>
-                        <p>STAR WARS</p>
-                        <h4>STORMTROOPER LIGHTSABER</h4>
-                        <p>$ 1799,99</p>
-                        <p>3 CUOTAS SIN INTERÉS</p>
-                    </div>
-                </article>
-            </li>
-            <li>
-                <article>
-                    <picture>
-                        <img src="./img/pokemon/pidgeotto-1.webp" alt="Figura coleccionable Funko de Pidgeotto de la serie 'Pokemon'">
-                    </picture>
-                    <div>
-                        <p>POKEMON</p>
-                        <h4>PIDGEOTTO</h4>
-                        <p>$ 1799,99</p>
-                        <p>3 CUOTAS SIN INTERÉS</p>
-                    </div>
-                </article>
-            </li>
-            <li>
-                <article>
-                    <picture>
-                        <img src="./img/harry-potter/luna-1.webp" alt="Figura coleccionable Funko de Luna Lovegood con mascara de leon de la película 'Harry Potter'">
-                    </picture>
-                    <div>
-                        <p>HARRY POTTER</p>
-                        <h4>LUNA LOVEGOOD LION MASK</h4>
-                        <p>$ 1799,99</p>
-                        <p>3 CUOTAS SIN INTERÉS</p>
-                    </div>
-                </article>
-            </li>
-        </ul>
-    </section>
+        <h2 class="news__title h2-title">Últimos lanzamientos</h2>
+        <div class="news__carousel">
+            <ul class="news__list flex-container flex-direction-row justify-space-between">
+                <li class="news__item">
+                    <article class="news__article">
+                        <picture class="news__image">
+                            <img class="news__img" src="./img/star-wars/trooper-1.webp" alt="Figura coleccionable Funko de un Stormtrooper de la película 'Star Wars'">
+                        </picture>
+                        <p class="news__status">NUEVO</p>
+                        <div class="news__content">
+                            <p class="news__category">STAR WARS</p>
+                            <h4 class="news__product-name">STORMTROOPER LIGHTSABER</h4>
+                            <p class="news__price">$ 1799,99</p>
+                            <p class="news__installments">3 CUOTAS SIN INTERÉS</p>
+                        </div>
+                    </article>
+                </li>
+                <li class="news__item">
+                    <article class="news__article">
+                        <picture class="news__image">
+                            <img class="news__img" src="./img/pokemon/pidgeotto-1.webp" alt="Figura coleccionable Funko de Pidgeotto de la serie 'Pokemon'">
+                        </picture>
+                        <p class="news__status">NUEVO</p>
+                        <div class="news__content">
+                            <p class="news__category">POKEMON</p>
+                            <h4 class="news__product-name">PIDGEOTTO</h4>
+                            <p class="news__price">$ 1799,99</p>
+                            <p class="news__installments">3 CUOTAS SIN INTERÉS</p>
+                        </div>
+                    </article>
+                </li>
+                <li class="news__item">
+                    <article class="news__article">
+                        <picture class="news__image">
+                            <img class="news__img" src="./img/harry-potter/luna-1.webp" alt="Figura coleccionable Funko de Luna Lovegood con mascara de leon de la película 'Harry Potter'">
+                        </picture>
+                        <p class="news__status">NUEVO</p>
+                        <div class="news__content">
+                            <p class="news__category">HARRY POTTER</p>
+                            <h4 class="news__product-name">LUNA LOVEGOOD LION MASK</h4>
+                            <p class="news__price">$ 1799,99</p>
+                            <p class="news__installments">3 CUOTAS SIN INTERÉS</p>
+                        </div>
+                    </article>
+                </li>
+            </ul>
+            <button class="news__carousel-control-prev">
+                <img class="news__carousel-control-icon" src="./img/icons/carousel-control-prev.svg" alt="Icono para seleccionar el elemento anterior en el carousel">
+            </button>
+            <button class="news__carousel-control-next">
+                <img class="news__carousel-control-icon" src="./img/icons/carousel-control-next.svg" alt="Icono para seleccionar el elemento posterior en el carousel">
+            </button>
+        </div>
+    </section>    
     <footer class="footer">
         <section class="footer__section">
             <nav class="footer__nav">
                 <ul class="footer__list">
                     <li class="footer__item">
-                        <a class="footer__link nav-text-style" href="./pages/shop.html">SHOP</a>
+                        <a class="footer__link nav-text-styles" href="./pages/shop.html">SHOP</a>
                     </li>
                     <li class="footer__item">
-                        <a class="footer__link nav-text-style" href="./pages/login.html">INGRESAR</a>
+                        <a class="footer__link nav-text-styles" href="./pages/login.html">INGRESAR</a>
                     </li>
                     <li class="footer__item">
-                        <a class="footer__link nav-text-style" href="./pages/contact.html">CONTACTO</a>
+                        <a class="footer__link nav-text-styles" href="./pages/contact.html">CONTACTO</a>
                     </li>
                 </ul>
             </nav>
