Starting pagination in 'shop' page.

--- a/pages/shop.html
+++ b/pages/shop.html
@@ -245,7 +245,15 @@
                 </article>
             </li>             
         </ul>
-        <div class="pagination"></div>
+        <ul class="pagination flex-container flex-direction-row flex-wrap-nowrap justify-space-between">
+            <li class="pagination__item"><a class="pagination__link" href="#">1</a></li>
+            <li class="pagination__item"><a class="pagination__link" href="#">2</a></li>
+            <li class="pagination__item"><a class="pagination__link" href="#">3</a></li>
+            <li class="pagination__item"><a class="pagination__link" href="#">4</a></li>
+            <li class="pagination__item"><a class="pagination__link" href="#">5</a></li>
+            <li class="pagination__item"><a class="pagination__link" href="#">6</a></li>
+            <li class="pagination__item"><a class="pagination__link" href="#">7</a></li>
+        </ul>
     </main>
     <footer class="footer">
         <section class="footer__section">
